@startuml

title 接口适配器模式类图

class Target {
    + void request()
}

interface Adaptee {
    + void specificRequest()
}

class Adapter {
    + void request()
    + void specificRequest()
}

note right of Adapter
public void request() {
    specificRequest();
}
end note

Adapter --|> Target
Adapter ..|> Adaptee

class Client

Client ..> Target

@enduml